Added file name

--- a/01a01a Communities Datasets.ipynb
+++ b/01a01a Communities Datasets.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# 01a01a Stanford Large Network Datasets with Ground-truth Communities\n",
     "\n",
-    "In this notebook, we will download some Directed Network Datasets with Ground-truth Communities from [Stanford Larget Network Dataset Collection](https://snap.stanford.edu/data/) and visualize them to build intuition about communities. "
+    "> Download some Directed Network Datasets with Ground-truth Communities from [Stanford Larget Network Dataset Collection](https://snap.stanford.edu/data/) and visualize them to build intuition about communities. "
    ]
   },
   {
@@ -445,13 +445,6 @@
     "order_ind = torch.argsort(data.y[:, 1] + data.y[:, 2] * data.num_nodes, descending=True)\n",
     "visualize_heatmap(data.edge_index, order_ind)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
