--- a/01a01b Small Random Directed Graphs.ipynb
+++ b/01a01b Small Random Directed Graphs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 01a01a Small Random Directed Graphs\n",
+    "# 01a01b Small Random Directed Graphs\n",
     "> Random graphs for random test cases"
    ]
   },
