--- a/01a02 Manifold Toy Datasets.ipynb
+++ b/01a02 Manifold Toy Datasets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manifold Toy Datasets\n",
+    "# 01a02 Manifold Toy Datasets\n",
     "\n",
     "> Collection of toy datasets sampling from ideal manifolds"
    ]
