--- a/01a02b Polar 2-Manifold Toy Datasets.ipynb
+++ b/01a02b Polar 2-Manifold Toy Datasets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polar 2-Manifold Toy Datasets\n",
+    "# 01a02b Polar 2-Manifold Toy Datasets\n",
     "\n",
     "> Collections of 2-Manifold toy datasets in 3 dimensional space generated from polar equations"
    ]
