--- a/01a02c Function 1-Manifold Toy Datasets.ipynb
+++ b/01a02c Function 1-Manifold Toy Datasets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function 1-Manifold Toy Datasets\n",
+    "# 01a02c Function 1-Manifold Toy Datasets\n",
     "\n",
     "> Collections of 1-Manifold toy datasets in 3 dimensional space generated from a function in xy-plane"
    ]
