--- a/01a02d Sphere and Torus Toy Datasets.ipynb
+++ b/01a02d Sphere and Torus Toy Datasets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sphere and Torus Toy Xsets\n",
+    "# 01a02d Sphere and Torus Toy Xsets\n",
     "\n",
     "> 2-Manifold with flow Datasets: The Sphere, The Torus, and the Paraboloid"
    ]
