Fix a few titles
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/02c Flow Neighborhoods.ipynb
+++ b/02c Flow Neighborhoods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow Neighborhoods\n",
+    "# 02c Flow Neighborhoods\n",
     "\n",
     "> Calculate the **directed neighbors** of each data points based on the flows at these points"
    ]
