--- a/01a01 Graph Toy Datasets.ipynb
+++ b/01a01 Graph Toy Datasets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Graph Toy Datasets\n",
+    "# 01a01 Graph Toy Datasets\n",
     "> Interesting Adjacency Matrices for test embeddings"
    ]
   },
