--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Flashlight Kernel"
+    "# 02a The Flashlight Kernel"
    ]
   },
   {
