Replaced all occurences of FlowNet with FRED
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/01a01 Graph Toy Datasets.ipynb
+++ b/01a01 Graph Toy Datasets.ipynb
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FlowNet is, at heart, an embedder of directed graphs. But what types of graphs? This notebook, and those nested under 01a01, contain a battery of toy directed graphs, including:\n",
+    "FRED is, at heart, an embedder of directed graphs. But what types of graphs? This notebook, and those nested under 01a01, contain a battery of toy directed graphs, including:\n",
     "1. (Directed) Stochastic Block Models\n",
     "2. Trees\n",
     "\n",
