--- a/01a01a Communities Datasets.ipynb
+++ b/01a01a Communities Datasets.ipynb
@@ -18,7 +18,7 @@
     "# default_exp graph_datasets\n",
     "# hide\n",
     "from nbdev.showdoc import *\n",
-    "from FlowNet.datasets import visualize_graph, visualize_heatmap\n",
+    "from FRED.datasets import visualize_graph, visualize_heatmap\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
