--- a/01a01b Small Random Directed Graphs.ipynb
+++ b/01a01b Small Random Directed Graphs.ipynb
@@ -17,7 +17,7 @@
     "# default_exp graph_datasets\n",
     "# hide\n",
     "from nbdev.showdoc import *\n",
-    "from FlowNet.datasets import visualize_graph, visualize_heatmap\n",
+    "from FRED.datasets import visualize_graph, visualize_heatmap\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from FlowNet.datasets import SmallRandom\n",
+    "from FRED.datasets import SmallRandom\n",
     "dataset = SmallRandom(num_nodes=10, prob_edge=0.3, )\n",
     "data = dataset[0] # there is only graph in this dataset"
    ]
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from FlowNet.datasets import SmallRandom, SourceSink\n",
+    "from FRED.datasets import SmallRandom, SourceSink\n",
     "pre_transform = SourceSink(prob_source=0.6, prob_sink=0.4, adv_prob=0.1, remove_prob=0)\n",
     "dataset = SmallRandom(num_nodes=20, prob_edge=0.2, pre_transform=pre_transform)\n",
     "data = dataset[0]"
