--- a/01a02 Manifold Toy Datasets.ipynb
+++ b/01a02 Manifold Toy Datasets.ipynb
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "from FlowNet.datasets import (\n",
+    "from FRED.datasets import (\n",
     "    display_flow_galary,\n",
     "    directed_circle, directed_spiral, directed_spiral_uniform, directed_spiral_delayed,\n",
     "    directed_cylinder, directed_swiss_roll, directed_swiss_roll_uniform, directed_swiss_roll_delayed,\n",
