--- a/02 Data Preprocessing.ipynb
+++ b/02 Data Preprocessing.ipynb
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "if torch.__version__[:4] == '1.13': # If using pytorch with MPS, use Apple silicon GPU acceleration\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else 'mps' if torch.has_mps else \"cpu\")\n",
     "else:\n",
@@ -43,7 +43,7 @@
    "source": [
     "## Philosophy\n",
     "\n",
-    "FlowNet accepts data of two types, but regardless of the data type used, data preprocessing is required. This involves some fairly mundane things (like converting the data to tensor format, wrapping it in a dataloader, etc), but also a few bespoke steps specific to FlowNet, such as \n",
+    "FRED accepts data of two types, but regardless of the data type used, data preprocessing is required. This involves some fairly mundane things (like converting the data to tensor format, wrapping it in a dataloader, etc), but also a few bespoke steps specific to FRED, such as \n",
     "1. Building a graph from the data using our flow-affinity \"flashlight\" kernel.\n",
     "2. Creating data batches which (rather like Node2vec) include a number of nearest neighbors, to enable neighbor-based loss functions to work.\n",
     "3. Performing a graph embedding on the data (like diffusion maps) to provide a reasonable embedding.\n",
