--- a/02c Flow Neighborhoods.ipynb
+++ b/02c Flow Neighborhoods.ipynb
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -95,7 +95,7 @@
    ],
    "source": [
     "# hide_input\n",
-    "from FlowNet.datasets import directed_spiral_delayed, plot_directed_2d\n",
+    "from FRED.datasets import directed_spiral_delayed, plot_directed_2d\n",
     "import torch\n",
     "X, flows, labels = directed_spiral_delayed()\n",
     "plot_directed_2d(X, flows, labels)"
@@ -130,8 +130,8 @@
    ],
    "source": [
     "# collapse\n",
-    "from FlowNet.data_processing import affinity_matrix_from_pointset_to_pointset\n",
-    "from FlowNet.datasets import visualize_edge_index\n",
+    "from FRED.data_processing import affinity_matrix_from_pointset_to_pointset\n",
+    "from FRED.datasets import visualize_edge_index\n",
     "import torch\n",
     "\n",
     "X = torch.tensor(X).float()\n",
