--- a/02d Flow Datasets.ipynb
+++ b/02d Flow Datasets.ipynb
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "if torch.__version__[:4] == '1.13': # If using pytorch with MPS, use Apple silicon GPU acceleration\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else 'mps' if torch.has_mps else \"cpu\")\n",
     "else:\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "# 02d Flow Datasets\n",
-    "> Here be the tailored datasets for FlowNet! In addition to storing points, we must store a graph, and intelligently sample from the graph so that batches preserve 'flow neighborhoods'"
+    "> Here be the tailored datasets for FRED! In addition to storing points, we must store a graph, and intelligently sample from the graph so that batches preserve 'flow neighborhoods'"
    ]
   },
   {
