--- a/00 Core.ipynb
+++ b/00 Core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FlowNet\n",
+    "# FRED\n",
     "\n",
     "> API details to come."
    ]
