--- a/01a02c Function 1-Manifold Toy Datasets.ipynb
+++ b/01a02c Function 1-Manifold Toy Datasets.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "from FlowNet.datasets import plot_directed_2d, plot_directed_3d, xy_tilt, add_noise, generate_prism"
+    "from FRED.datasets import plot_directed_2d, plot_directed_3d, xy_tilt, add_noise, generate_prism"
    ]
   },
   {
