--- a/01a02d Sphere and Torus Toy Datasets.ipynb
+++ b/01a02d Sphere and Torus Toy Datasets.ipynb
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "from FlowNet.datasets import plot_directed_3d, plot_directed_2d"
+    "from FRED.datasets import plot_directed_3d, plot_directed_2d"
    ]
   },
   {
