--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -29,7 +29,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import FlowNet\n",
+    "import FRED\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
