--- a/02b Diffusion Maps and Distances.ipynb
+++ b/02b Diffusion Maps and Distances.ipynb
@@ -1269,18 +1269,18 @@
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'directed_swiss_roll_uniform' from 'FlowNet.datasets' (/Users/adjourner/Projects/FlowNet/FlowNet/datasets.py)",
+     "evalue": "cannot import name 'directed_swiss_roll_uniform' from 'FRED.datasets' (/Users/adjourner/Projects/FRED/FRED/datasets.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/Users/adjourner/Projects/FlowNet/02b Diffusion Maps and Distances.ipynb Cell 68\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adjourner/Projects/FlowNet/02b%20Diffusion%20Maps%20and%20Distances.ipynb#ch0000067?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFlowNet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mimport\u001b[39;00m directed_swiss_roll_uniform, directed_swiss_roll, plot_directed_3d, affinity_grid_search\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adjourner/Projects/FlowNet/02b%20Diffusion%20Maps%20and%20Distances.ipynb#ch0000067?line=1'>2</a>\u001b[0m X, flow, labels \u001b[39m=\u001b[39m directed_swiss_roll(num_nodes\u001b[39m=\u001b[39m\u001b[39m2000\u001b[39m, num_spirals\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, radius\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, height\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m, xtilt\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, ytilt\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adjourner/Projects/FlowNet/02b%20Diffusion%20Maps%20and%20Distances.ipynb#ch0000067?line=2'>3</a>\u001b[0m plot_directed_3d(X, flow, labels, mask_prob\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'directed_swiss_roll_uniform' from 'FlowNet.datasets' (/Users/adjourner/Projects/FlowNet/FlowNet/datasets.py)"
+      "\u001b[1;32m/Users/adjourner/Projects/FRED/02b Diffusion Maps and Distances.ipynb Cell 68\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adjourner/Projects/FRED/02b%20Diffusion%20Maps%20and%20Distances.ipynb#ch0000067?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFRED\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mimport\u001b[39;00m directed_swiss_roll_uniform, directed_swiss_roll, plot_directed_3d, affinity_grid_search\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adjourner/Projects/FRED/02b%20Diffusion%20Maps%20and%20Distances.ipynb#ch0000067?line=1'>2</a>\u001b[0m X, flow, labels \u001b[39m=\u001b[39m directed_swiss_roll(num_nodes\u001b[39m=\u001b[39m\u001b[39m2000\u001b[39m, num_spirals\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, radius\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, height\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m, xtilt\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, ytilt\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adjourner/Projects/FRED/02b%20Diffusion%20Maps%20and%20Distances.ipynb#ch0000067?line=2'>3</a>\u001b[0m plot_directed_3d(X, flow, labels, mask_prob\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'directed_swiss_roll_uniform' from 'FRED.datasets' (/Users/adjourner/Projects/FRED/FRED/datasets.py)"
      ]
     }
    ],
    "source": [
-    "from FlowNet.datasets import directed_swiss_roll_uniform, directed_swiss_roll, plot_directed_3d, affinity_grid_search\n",
+    "from FRED.datasets import directed_swiss_roll_uniform, directed_swiss_roll, plot_directed_3d, affinity_grid_search\n",
     "X, flow, labels = directed_swiss_roll(num_nodes=2000, num_spirals=2, radius=2, height=20, xtilt=0, ytilt=0)\n",
     "plot_directed_3d(X, flow, labels, mask_prob=0.5)"
    ]
