flashlight affinity matrix has bandwidth estimation, first batching manifold dataset, updated docs
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/02b Diffusion Maps and Distances.ipynb
+++ b/02b Diffusion Maps and Distances.ipynb
@@ -416,6 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "def zero_negligible_thresholds(A, threshold = 1e-5):\n",
     "    A = make_sparse_safe(A)\n",
     "    sparse_A_2 = A.copy()\n",
