Added dataset galaries

--- a/01a02d Sphere and Torus Toy Datasets.ipynb
+++ b/01a02d Sphere and Torus Toy Datasets.ipynb
@@ -28,10 +28,6 @@
     "# hide\n",
     "from nbdev.showdoc import *\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import FRED\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -51,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "# collapse\n",
     "from FRED.datasets import plot_directed_3d, plot_directed_2d"
    ]
   },
@@ -154,8 +150,8 @@
     "        Radius of tube.\n",
     "    flow_type, in ['whirlpool']\n",
     "\n",
-    "    ambient : int, default=None\n",
-    "        Embed the torus into a space with ambient dimension equal to `ambient`. The torus is randomly rotated in this high dimensional space.\n",
+    "    noise : float, default=None\n",
+    "        Amount of noise\n",
     "    seed : int, default=None\n",
     "        Seed for random state.\n",
     "    \"\"\"\n",
@@ -236,7 +232,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypersphere"
+    "## Hypersphere\n",
+    "\n",
+    "We make use of the `tadasets` to sample from a sphere and add `whirlpool` flow on top."
    ]
   },
   {
@@ -248,6 +246,23 @@
     "# export\n",
     "import tadasets\n",
     "def directed_sphere(n=2000, r=1, flow_type = 'whirlpool', noise=None):\n",
+    "    \"\"\"\n",
+    "    Sample `n` data points on a sphere.\n",
+    "    In addition to the points, returns a \"flow\" vector at each point. \n",
+    "\n",
+    "    Parameters\n",
+    "    -----------\n",
+    "    n : int\n",
+    "        Number of data points in shape.\n",
+    "    r : float\n",
+    "        Radius of sphere.\n",
+    "    flow_type, in ['whirlpool']\n",
+    "\n",
+    "    noise : float, default=None\n",
+    "        Amount of noise\n",
+    "    seed : int, default=None\n",
+    "        Seed for random state.\n",
+    "    \"\"\"\n",
     "    X = tadasets.sphere(n, r, noise)\n",
     "    labels = angle_x(X)\n",
     "    if flow_type == 'whirlpool':\n",
