--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -28,9 +28,6 @@
     "from nbdev.showdoc import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import FRED\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -181,34 +178,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can display a galary of manifold with flow using the `display_flow_galary` function below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "import matplotlib.pyplot as plt\n",
-    "def display_flow_galary(func_set, ncol=4):\n",
-    "    nfunc = len(func_set)\n",
-    "    ncol = 4\n",
-    "    nrow = int(np.ceil(nfunc/ncol))\n",
-    "    fig = plt.figure(figsize=(4*ncol, 3*nrow))\n",
-    "    for i, func in enumerate(func_set):\n",
-    "        name, call = func\n",
-    "        ax = fig.add_subplot(nrow, ncol, i+1, projection=\"3d\")\n",
-    "        X, flows, labels = call()\n",
-    "        plot_directed_3d(X, flows, labels, mask_prob=0.5, ax=ax)\n",
-    "        ax.set_title(name, y=1.0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Graph Plotting\n",
     "\n",
     "Functions to visualize (small) graphs, directed and undirected."
@@ -226,12 +195,18 @@
     "from torch_geometric.utils import to_networkx\n",
     "\n",
     "\n",
-    "def visualize_graph(data, is_networkx=False, to_undirected=False):\n",
+    "def visualize_graph(data, is_networkx=False, to_undirected=False, ax=None):\n",
     "    G = data if is_networkx else to_networkx(data, to_undirected=to_undirected)\n",
-    "    nx.draw_networkx(\n",
-    "        G, pos=nx.spring_layout(G, seed=42), arrowsize=20, node_color=\"#adade0\"\n",
-    "    )\n",
-    "    plt.show()\n"
+    "    pos = nx.spring_layout(G, seed=42)\n",
+    "    if ax is None:\n",
+    "        nx.draw_networkx(\n",
+    "            G, pos=pos, arrowsize=20, node_color=\"#adade0\"\n",
+    "        )\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        nx.draw_networkx(\n",
+    "            G, pos=pos, arrowsize=20, node_color=\"#adade0\", ax=ax\n",
+    "        )\n"
    ]
   },
   {
@@ -284,6 +259,79 @@
     "    else:\n",
     "        plt.imshow(dense_adj, cmap=cmap)\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Galary display\n",
+    "\n",
+    "The following function takes a list of data generating functions and plot all of them to display a galary of datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "import matplotlib.pyplot as plt\n",
+    "def display_galary(vizset, ncol=4):\n",
+    "    nviz = len(vizset)\n",
+    "    nrow = int(np.ceil(nviz/ncol))\n",
+    "    fig = plt.figure(figsize=(4*ncol, 3*nrow))\n",
+    "    for i, viz in enumerate(vizset):\n",
+    "        name, data, vizcall, is3d = viz\n",
+    "        ax = fig.add_subplot(nrow, ncol, i+1, projection=\"3d\" if is3d else None)\n",
+    "        vizcall(data, ax)\n",
+    "        ax.set_title(name, y=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "def display_flow_galary(dataset, ncol=4):\n",
+    "    vizset = []\n",
+    "    for name, data in dataset:\n",
+    "        vizset.append((name, data, lambda data, ax: plot_directed_3d(data[0], data[1], data[2], mask_prob=0.5, ax=ax), True))\n",
+    "    display_galary(vizset, ncol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export graph_datasets\n",
+    "from FRED.datasets import display_galary\n",
+    "import torch\n",
+    "def display_heatmap_galary(dataset, ncol=4):\n",
+    "    vizset = []\n",
+    "    for name, data in dataset:\n",
+    "        order_ind = None if data.y is None else torch.argsort(data.y[:,1])\n",
+    "        vizset.append((name, data, lambda data, ax: visualize_heatmap(data.edge_index, order_ind, ax=ax), False))\n",
+    "    display_galary(vizset, ncol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export graph_datasets\n",
+    "def display_graph_galary(dataset, ncol=4):\n",
+    "    vizset = []\n",
+    "    for name, data in dataset:\n",
+    "        vizset.append((name, data, lambda data, ax: visualize_graph(data, ax=ax), False))\n",
+    "    display_galary(vizset, ncol)"
    ]
   }
  ],
