Added loss functions

--- a/03c02 Flow Neighbor MSE.ipynb
+++ b/03c02 Flow Neighbor MSE.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 03c Loss functions\n",
-    "\n",
-    "> Various components that can be used in FRED's loss function"
+    "# 03c02 Flow Neighbor MSE"
    ]
   },
   {
@@ -28,11 +26,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export\n",
+    "import torch\n",
+    "def directed_neighbors(num_nodes, P_graph, n_neighbors=5):\n",
+    "    # remove self loop\n",
+    "    P_graph = P_graph - torch.eye(num_nodes).to(P_graph.device)\n",
+    "    # return k nearest neighbor indices\n",
+    "    _, neighbors = torch.topk(P_graph, n_neighbors)\n",
+    "    # convert to edge_index format\n",
+    "    row = torch.arange(num_nodes).repeat_interleave(n_neighbors).to(P_graph.device)\n",
+    "    col = neighbors.flatten().to(P_graph.device)\n",
+    "    return torch.stack((row, col))"
+   ]
   }
  ],
  "metadata": {
