--- a/03c04 KL Divergence.ipynb
+++ b/03c04 KL Divergence.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 03c Loss functions\n",
-    "\n",
-    "> Various components that can be used in FRED's loss function"
+    "# 03c04 KL Divergence"
    ]
   },
   {
@@ -28,11 +26,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export\n",
+    "def kl_divergence_loss(KLD, P_graph, P_embedding):\n",
+    "    P_embedding = torch.log(P_embedding)\n",
+    "    if KLD.log_target:\n",
+    "        P_graph = torch.log(P_graph)\n",
+    "    if P_embedding.is_sparse:\n",
+    "        P_embedding = P_embedding.to_dense()\n",
+    "        P_graph = P_graph.to_dense()\n",
+    "    loss = KLD(P_embedding, P_graph)\n",
+    "    return loss"
+   ]
   }
  ],
  "metadata": {
