--- a/03c01 Diffusion Map MSE.ipynb
+++ b/03c01 Diffusion Map MSE.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 03c Loss functions\n",
-    "\n",
-    "> Various components that can be used in FRED's loss function"
+    "# 03c01 Diffusion Map MSE"
    ]
   },
   {
@@ -28,11 +26,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a general loss function that applies to any matrix of precomputed distances -- be they shortest path distances, or diffusion distances."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export\n",
+    "import torch\n",
+    "def precomputed_distance_loss(precomputed_distances, embedded_points):\n",
+    "    D_graph = precomputed_distances\n",
+    "    num_nodes = embedded_points.shape[0]\n",
+    "    D_embedding = torch.cdist(embedded_points, embedded_points)\n",
+    "    loss = torch.norm(D_graph - D_embedding)**2 / (num_nodes**2)\n",
+    "    return loss"
+   ]
   }
  ],
  "metadata": {
