Added grid sampler and gaussian vector field flow artist
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -417,7 +417,7 @@
     "# export\n",
     "import torch\n",
     "import numpy as np\n",
-    "def flashlight_affinity_matrix(X, flow, k=10, sigma=\"automatic\"):\n",
+    "def flashlight_affinity_matrix(X, flow, k=10, sigma=\"automatic\", flow_strength= 1):\n",
     "    if type(X) == torch.Tensor:\n",
     "        X = X.numpy()\n",
     "    Dists = distance_matrix(X)\n",
@@ -427,7 +427,7 @@
     "    # convert back to tensors\n",
     "    X = torch.Tensor(X)\n",
     "    flow = torch.Tensor(flow)\n",
-    "    A = affinity_matrix_from_pointset_to_pointset(X, X, flow, sigma=sigma)\n",
+    "    A = affinity_matrix_from_pointset_to_pointset(X, X, flow, sigma=sigma, flow_strength=flow_strength)\n",
     "    return A"
    ]
   },
