--- a/03a Autoencoder.ipynb
+++ b/03a Autoencoder.ipynb
@@ -20,8 +20,7 @@
    "source": [
     "# default_exp embed\n",
     "\n",
-    "!nbdev_build_lib\n",
-    "!nbdev_buid_docs"
+    "!nbdev_build_lib"
    ]
   },
   {
