--- a/04c Flavors of FRED.ipynb
+++ b/04c Flavors of FRED.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp \n",
+    "# default_exp trainers\n",
     "from nbdev.showdoc import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
