FRED is complete!
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/03b Flow Artist.ipynb
+++ b/03b Flow Artist.ipynb
@@ -88,7 +88,7 @@
     "            d[str(i)] = nn.Linear(shape[int(i/2)], shape[int(i/2)+1])\n",
     "    \n",
     "    # create MLP\n",
-    "    FA = nn.Sequential(d) # d is an OrderedDictionary\n",
+    "    FA = nn.Sequential(d).to(device) # d is an OrderedDictionary\n",
     "        \n",
     "    return FA"
    ]
@@ -141,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
