--- a/03c02 Flow Neighbor MSE.ipynb
+++ b/03c02 Flow Neighbor MSE.ipynb
@@ -37,22 +37,18 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "import torch\n",
-    "def directed_neighbors(num_nodes, P_graph, n_neighbors=5):\n",
-    "    # remove self loop\n",
-    "    P_graph = P_graph - torch.eye(num_nodes).to(P_graph.device)\n",
-    "    # return k nearest neighbor indices\n",
-    "    _, neighbors = torch.topk(P_graph, n_neighbors)\n",
-    "    # convert to edge_index format\n",
-    "    row = torch.arange(num_nodes).repeat_interleave(n_neighbors).to(P_graph.device)\n",
-    "    col = neighbors.flatten().to(P_graph.device)\n",
-    "    return torch.stack((row, col))"
+    "def flow_neighbor_loss(neighbors, embedded_points, embedded_flows):\n",
+    "  row, col = neighbors\n",
+    "  directions = embedded_points[col,:] - embedded_points[row,:]\n",
+    "  flows = embedded_flows[row,:]\n",
+    "  loss = torch.norm(directions - flows)**2\n",
+    "  return loss"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
