--- a/04b Visualizations for Training.ipynb
+++ b/04b Visualizations for Training.ipynb
@@ -135,7 +135,6 @@
     "    loss_type=\"total\",\n",
     "):\n",
     "    # diffusion_loss,reconstruction_loss, smoothness_loss\n",
-    "    x = []\n",
     "    k = \"\"\n",
     "    if prior_losses is None:\n",
     "        # if there are no prior losses, initialize a new dictionary to store these\n",
@@ -144,22 +143,11 @@
     "            prior_losses[key] = []\n",
     "            # k = key\n",
     "        prior_losses[\"total\"] = []\n",
-    "    for i in range(\n",
-    "        max(\n",
-    "            [\n",
-    "                len(provided_losses[\"diffusion\"]),\n",
-    "                len(provided_losses[\"smoothness\"]),\n",
-    "                len(provided_losses[\"diffusion map regularization\"]),\n",
-    "                len(provided_losses[\"flow cosine loss\"]),\n",
-    "            ]\n",
-    "        )\n",
-    "    ):\n",
-    "        x.append(i)\n",
-    "        for key in provided_losses.keys():\n",
-    "            try:\n",
-    "                prior_losses[key].append(provided_losses[key][i].detach().cpu().numpy())\n",
-    "            except:\n",
-    "                prior_losses[key].append(0)\n",
+    "    for key in provided_losses.keys():\n",
+    "        try:\n",
+    "            prior_losses[key].append(provided_losses[key].detach().cpu().numpy())\n",
+    "        except:\n",
+    "            prior_losses[key].append(0)\n",
     "    return prior_losses\n"
    ]
   },
