--- a/03 Embedder.ipynb
+++ b/03 Embedder.ipynb
@@ -53,14 +53,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manifold with Flow Embedder\n",
-    "\n"
+    "# Manifold with Flow Embedder\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "class ManifoldFlowEmbedder(torch.nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        embedding_dimension=2,\n",
+    "        embedder_shape=[3, 4, 8, 4, 2],\n",
+    "        device=torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "        sigma=0.5,\n",
+    "        flow_strength=0.5,\n",
+    "        smoothness_grid=True,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.device = device\n",
+    "        self.embedding_dimension = embedding_dimension\n",
+    "        # embedding parameters\n",
+    "        self.sigma = sigma\n",
+    "        self.flow_strength = flow_strength\n",
+    "        self.smoothness_grid = smoothness_grid\n",
+    "        # Initialize autoencoder and flow artist\n",
+    "        self.embedder, self.decoder = auto_encoder(embedder_shape, device=self.device)\n",
+    "        self.flowArtist = flow_artist(dim=self.embedding_dimension, device=self.device)\n",
+    "        # training ops\n",
+    "        self.KLD = nn.KLDivLoss(reduction=\"batchmean\", log_target=False)\n",
+    "        self.MSE = nn.MSELoss()\n",
+    "        # self.KLD = homemade_KLD # when running on mac\n",
+    "        self.epsilon = 1e-6  # set zeros to eps\n",
+    "\n",
+    "    def loss(self, data, loss_weights):\n",
+    "        # compute autoencoder loss\n",
+    "        losses = {}\n",
+    "        if loss_weights[\"reconstruction\"] != 0:\n",
+    "            X_reconstructed = self.decoder(self.embedded_points)\n",
+    "            losses[\"reconstruction\"] = self.MSE(X_reconstructed, data[\"X\"])\n",
+    "        # Compute diffusion map loss\n",
+    "        if loss_weights[\"diffusion map regularization\"] != 0:\n",
+    "            diffmap_loss = precomputed_distance_loss(\n",
+    "                data[\"precomputed distances\"], self.embedded_points\n",
+    "            )\n",
+    "            #           diffmap_loss = diffusion_map_loss(self.P_graph_ts[0], self.embedded_points)\n",
+    "            losses[\"diffusion map regularization\"] = diffmap_loss\n",
+    "\n",
+    "        # Compute flow neighbor loss\n",
+    "        if loss_weights[\"flow neighbor loss\"] != 0:\n",
+    "            neighbor_loss = flow_neighbor_loss(\n",
+    "                data[\"neighbors\"],\n",
+    "                self.embedded_points,\n",
+    "                self.embedded_flows,\n",
+    "            )\n",
+    "            losses[\"flow neighbor loss\"] = neighbor_loss\n",
+    "\n",
+    "        # Compute smoothness regularization\n",
+    "        if loss_weights[\"smoothness\"] != 0:\n",
+    "            smoothness_loss = smoothness_of_vector_field(\n",
+    "                self.embedded_points,\n",
+    "                self.flowArtist,\n",
+    "                device=self.device,\n",
+    "                grid_width=20,\n",
+    "                use_grid=self.smoothness_grid,\n",
+    "            )\n",
+    "            losses[\"smoothness\"] = smoothness_loss\n",
+    "        return losses\n",
+    "\n",
+    "    def forward(self, data, loss_weights):\n",
+    "        self.embedded_points = self.embedder(data[\"X\"])\n",
+    "        self.embedded_flows = self.flowArtist(self.embedded_points)\n",
+    "        losses = self.loss(data, loss_weights)\n",
+    "        return losses"
+   ]
   }
  ],
  "metadata": {
