Displayed all scvelo galary

--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -299,7 +299,9 @@
     "def display_flow_galary(dataset, ncol=4):\n",
     "    vizset = []\n",
     "    for name, data in dataset:\n",
-    "        vizset.append((name, data, lambda data, ax: plot_directed_3d(data[0], data[1], data[2], mask_prob=0.5, ax=ax), True))\n",
+    "        vizset.append((name, data, lambda data, ax: plot_directed_3d(\n",
+    "            data[0], data[1], data[2], mask_prob=0.5, ax=ax\n",
+    "        ), True))\n",
     "    display_galary(vizset, ncol)"
    ]
   },
@@ -315,8 +317,11 @@
     "def display_heatmap_galary(dataset, ncol=4):\n",
     "    vizset = []\n",
     "    for name, data in dataset:\n",
-    "        order_ind = None if data.y is None else torch.argsort(data.y[:,1])\n",
-    "        vizset.append((name, data, lambda data, ax: visualize_heatmap(data.edge_index, order_ind, ax=ax), False))\n",
+    "        vizset.append((name, data, lambda data, ax: visualize_heatmap(\n",
+    "            data.edge_index, \n",
+    "            order_ind=None if data.y is None else torch.argsort(data.y[:,-1]), \n",
+    "            ax=ax\n",
+    "        ), False))\n",
     "    display_galary(vizset, ncol)"
    ]
   },
@@ -330,7 +335,7 @@
     "def display_graph_galary(dataset, ncol=4):\n",
     "    vizset = []\n",
     "    for name, data in dataset:\n",
-    "        vizset.append((name, data, lambda data, ax: visualize_graph(data, ax=ax), False))\n",
+    "        vizset.append((name, lambda ax: visualize_graph(data, ax=ax), False))\n",
     "    display_galary(vizset, ncol)"
    ]
   }
