now works on cuda flawlessly

--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -127,7 +127,6 @@
     "                # have model compute losses, compile them into cost using loss weights\n",
     "                data['X'] = data['X'].to(self.device)\n",
     "                data['P'] = data['P'].to(self.device)\n",
-    "                print(\"X is on\",data['X'].device)\n",
     "                data['precomputed distances'] = data['precomputed distances'].to(self.device)\n",
     "                losses = self.FE(data, self.loss_weights)\n",
     "                cost = self.weight_losses(losses)\n",
@@ -141,7 +140,7 @@
     "            # run visualizations, if needed\n",
     "            if epoch_num % self.epochs_between_visualization == 0:\n",
     "                title = f\"{self.timestamp}/{self.title} Epoch {epoch_num:03d}\"\n",
-    "                emb_X = self.FE.embedder(self.X)\n",
+    "                emb_X = self.FE.embedder(self.X.to(device))\n",
     "                flowArtist = self.FE.flowArtist\n",
     "                self.visualize(emb_X, flowArtist, self.losses, title)\n",
     "        # Save most recent embedded points and flow artist for running visualizations\n",
@@ -477,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
